tests/rosetta/out/Rust/aks-test-for-primes.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /tmp/aks-test-for-primes.rs:8:18
  |
8 |             s += coef.to_string();
  |                  ^^^^^^^^^^^^^^^^ expected `&str`, found `String`
  |
help: consider borrowing here
  |
8 |             s += &coef.to_string();
  |                  +

error[E0277]: cannot multiply `i32` by `f64`
  --> /tmp/aks-test-for-primes.rs:15:27
   |
15 |             coef = ((coef * i as f64) / ((p - i + 1) as f64)).parse::<i32>().unwrap();
   |                           ^ no implementation for `i32 * f64`
   |
   = help: the trait `Mul<f64>` is not implemented for `i32`
   = help: the following other types implement trait `Mul<Rhs>`:
             `&i32` implements `Mul<i32>`
             `&i32` implements `Mul`
             `i32` implements `Mul<&i32>`
             `i32` implements `Mul`

error[E0600]: cannot apply unary operator `-` to type `String`
  --> /tmp/aks-test-for-primes.rs:21:64
   |
21 |                 s = format!("{}{}", format!("{}{}", s, " - "), -d.to_string());
   |                                                                ^^^^^^^^^^^^^^ cannot apply unary operator `-`
   |
note: the foreign item type `String` doesn't implement `Neg`
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/string.rs:360:1
   |
   = note: not implement `Neg`

error[E0308]: mismatched types
  --> /tmp/aks-test-for-primes.rs:28:17
   |
4  |         let mut s: String = String::new();
   |                    ------ expected due to this type
...
28 |             s = "1";
   |                 ^^^- help: try using a conversion method: `.to_string()`
   |                 |
   |                 expected `String`, found `&str`

error[E0308]: mismatched types
  --> /tmp/aks-test-for-primes.rs:30:16
   |
3  |     fn poly(p: i32) -> &'static str {
   |                        ------------ expected `&'static str` because of return type
...
30 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
30 |         return &s;
   |                +

error[E0277]: cannot multiply `i32` by `f64`
  --> /tmp/aks-test-for-primes.rs:42:21
   |
42 |             c = ((c * (n - i) as f64) / ((i + 1) as f64)).parse::<i32>().unwrap();
   |                     ^ no implementation for `i32 * f64`
   |
   = help: the trait `Mul<f64>` is not implemented for `i32`
   = help: the following other types implement trait `Mul<Rhs>`:
             `&i32` implements `Mul<i32>`
             `&i32` implements `Mul`
             `i32` implements `Mul<&i32>`
             `i32` implements `Mul`

error[E0308]: mismatched types
  --> /tmp/aks-test-for-primes.rs:59:29
   |
59 |                     line += p.to_string();
   |                             ^^^^^^^^^^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
59 |                     line += &p.to_string();
   |                             +

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308, E0600.
For more information about an error, try `rustc --explain E0277`.
